# helios

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  fix_main.go.py  go.mod  pyproject.toml
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish-to-pypi.yml  release.yml  test.yml
cmd/helios/: main.go
docker/: Dockerfile
implementations/python/: verify.py
implementations/python/conformance/: __init__.py  canon.py  hasher.py  objects.py  verifier.py
implementations/python/helios/: __init__.py  cli.py
implementations/python/helios_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
implementations/python/tests/: test_canon.py  test_guard.py  test_hasher.py
internal/canon/: serializer.go  serializer_test.go
internal/hash/: hardening_test.go  hasher.go  hasher_test.go
internal/object/: memory_object.go
internal/verify/: verifier.go  verifier_test.go
scripts/: cross_check.sh  install_hooks.sh  quality_gate.sh
spec/: canonical-serialization.md  integrity-boundary.md
test_vectors/: vector_reject_float.json  vector_reject_null.json  vectors.json  vectors_v2_retired.json
