[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helios-core"
version = "1.0.0"
description = "Deterministic canonical-serialization SHA-256 content hashing for AI memory objects. Cross-verified Go + Python reference implementations with frozen test vectors."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ashura Joseph Holeyfield", email = "holeyfield33art@users.noreply.github.com"},
]
keywords = [
    "content-hashing",
    "canonical-serialization",
    "sha256",
    "provenance",
    "ai-memory",
    "integrity",
    "deterministic",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
build = [
    "build>=1.0",
]

[project.urls]
Repository = "https://github.com/holeyfield33-art/helios"
Changelog = "https://github.com/holeyfield33-art/helios/blob/main/CHANGELOG.md"
Issues = "https://github.com/holeyfield33-art/helios/issues"
Specification = "https://github.com/holeyfield33-art/helios/tree/main/spec"
Documentation = "https://github.com/holeyfield33-art/helios#readme"

[project.scripts]
helios-verify = "helios.cli:verify_main"

[tool.setuptools.packages.find]
where = ["implementations/python"]
include = ["conformance*", "helios*"]

[tool.setuptools.package-data]
conformance = ["py.typed"]
helios = ["py.typed", "cli.py"]

[tool.pytest.ini_options]
pythonpath = ["implementations/python"]
testpaths = ["implementations/python/tests"]
